--- a/src/styles/navigation/logo.scss
+++ b/src/styles/navigation/logo.scss
@@ -11,13 +11,13 @@
 .logo-title {
   margin-top: 1rem;
   margin-left: 1rem;
-  color: $dark-orange;
+  color: $primary;
   font-family: $variane;
   font-size: 3rem;
 }
 
 .logo-title:hover {
-  color: $light-orange;
+  color: $primary-light;
   text-decoration: none;
   cursor: pointer;
 }
