--- a/src/styles/atoms/button.scss
+++ b/src/styles/atoms/button.scss
@@ -14,13 +14,13 @@
   margin-left: 0px;
   padding: 10px;
   border-radius: 5px;
-  background-color: $dark-orange;
+  background-color: $primary;
   color: white;
   font-weight: bold;
 }
 
 .button.submit:hover {
-  background-color: $light-orange;
+  background-color: $primary-light;
 }
 
 .button.hover-bold:hover {
