--- a/src/styles/atoms/footer.scss
+++ b/src/styles/atoms/footer.scss
@@ -4,7 +4,7 @@
 
 .footer {
   background-color: white;
-  color: $dark-orange;
+  color: $primary;
   font-family: $variane;
   font-size: 2rem;
   text-align: center;
