--- a/src/styles/forms/form.scss
+++ b/src/styles/forms/form.scss
@@ -7,11 +7,12 @@
 
 .form .heading {
   font-size: 20px;
+  font-weight: bold;
 }
 
 .form .body {
   margin-left: 0px;
-  margin-top: 10px;
+  margin-top: 1rem;
   font-style: italic;
 }
 
