--- a/src/styles/views/view.scss
+++ b/src/styles/views/view.scss
@@ -5,6 +5,16 @@
   margin: 0 10%;
 }
 
+.title {
+  font-size: 2rem;
+}
+
+.documents {
+  color: $dark-grey;
+  margin: 10% 8%;
+  line-spacing: 2rem;
+}
+
 .option-img, .highlight-img {
   margin: 0 30%;
   width: 40%;
@@ -12,11 +22,10 @@
 
 .preview-text {
   font-family: $variane;
-  color: $med-grey;
+  color: $light-grey;
   font-size: 3rem;
   margin: 20% 30%;
 }
-
 
 @media(min-width:992px) {
   #home.view {
