added linked display of connected documents and tags

--- a/src/styles/main/variables.scss
+++ b/src/styles/main/variables.scss
@@ -21,7 +21,7 @@ $sans-serif: 'Alef', 'Trebuchet MS', sans-serif;
 
 /* Colors */
 
-$salmon: #fac081;
+$salmon: #fa8c80;
 $yellow: #f8fa81;
 $light-green: #bbfa81;
 $green: #81fa84;
@@ -43,10 +43,10 @@ $light-grey: #ddd;
 
 $primary: $blue;
 $primary-light: $lime;
-$primary-nav-main: $periwinkle;
-$primary-nav-highlight: $cause;
-$secondary-nav-main: $periwinkle;
-$secondary-nav-highlight: $cause;
+$primary-nav-main: $blue;
+$primary-nav-highlight: $blue;
+$secondary-nav-main: $blue;
+$secondary-nav-highlight: $periwinkle;
 $ternary: $blue;
 $ternary-light: $light-blue;
 
