--- a/src/styles/main/variables.scss
+++ b/src/styles/main/variables.scss
@@ -29,6 +29,7 @@ $med-green: #b4eb81;
 $sage: #a5cc80;
 $seafoam: #81fac0;
 $aqua: #4ce8fa; // #81f8fa
+$teal: #6acfd6;
 
 $cause: #81bbfa;
 $periwinkle: #8481fa;
@@ -42,7 +43,7 @@ $med-grey: #666;
 $light-grey: #ddd;
 
 $primary: $blue;
-$primary-light: $lime;
+$primary-light: $teal;
 $primary-nav-main: $blue;
 $primary-nav-highlight: $blue;
 $secondary-nav-main: $blue;
