--- a/src/styles/navigation/navbar.scss
+++ b/src/styles/navigation/navbar.scss
@@ -110,6 +110,8 @@
   .navbar-spread {
     display: block;
     float: right;
+    margin-top: .5rem;
+    margin-right: 1rem;
   }
   
   .navbar-spread {
