--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -5,5 +5,12 @@ body {
   padding: 0;
   margin: 0;
   font-family: $sans-serif;
-  
+}
+
+a {
+  text-decoration: none;
+}
+
+.clear {
+  clear: both;
 }
