--- a/src/styles/navigation/message.scss
+++ b/src/styles/navigation/message.scss
@@ -1,11 +1,10 @@
 @import './../main/variables.scss';
 
 .message-box {
-    border-radius: 5px;
-    padding: 20px;
-    padding-bottom: 40px;
-    margin: 30px;
-    margin-bottom: 40px;
+    border-radius: 10px;
+    padding: 35px;
+    margin: 3%;
+    margin-bottom: 4%;
 }
 
 .message-box.error {
@@ -25,15 +24,16 @@
 .message {
     float: left;
     padding: 0px;
+    font-size: 1.5rem;
 }
 
 .message-close-button {
     float: right;
     margin: 0px;
-    font-weight: bold;
+    font-size: 1.5rem;
 }
 
 .message-close-button:hover {
     cursor: pointer;
-    color: black;
+    font-weight: bold;
 }
