--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -8,7 +8,13 @@ body {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
+}
+
+p {
+  font-size: 1.2rem;
+  color: $med-grey;
+  margin: 3% 0% !important;
 }
 
 .clear {
