revamped styling and improved core UX flow, modified error message handling to mirror UI, updated views to display tags interactively

--- a/src/styles/navigation/message.scss
+++ b/src/styles/navigation/message.scss
@@ -30,7 +30,8 @@
 .message-close-button {
     float: right;
     margin: 0px;
-    font-size: 1.2rem;
+    font-size: 2rem;
+    line-height: 1rem;
 }
 
 .message-close-button:hover {
