--- a/src/styles/atoms/button.scss
+++ b/src/styles/atoms/button.scss
@@ -4,6 +4,17 @@
   cursor: pointer;
 }
 
+.button-image {
+  text-align: center;
+}
+
+.button-image-left {
+  float: left;
+  margin-right: 10px;
+  width: 30px;
+  height: 30px;
+}
+
 .button-link {
   color: inherit !important;
   text-decoration: none;
