--- a/src/styles/forms/form.scss
+++ b/src/styles/forms/form.scss
@@ -6,13 +6,14 @@
 }
 
 .form .heading {
-  font-size: 20px;
+  font-size: 1.6rem;
   font-weight: bold;
 }
 
 .form .body {
   margin-left: 0px;
   margin-top: 1rem;
+  font-size: 1.2rem;
   font-style: italic;
 }
 
@@ -25,6 +26,27 @@
   margin-bottom: 10px;
 }
 
+.form-box .button-label {
+  color: $med-grey;
+  font-weight: normal;
+  font-size: 1.2rem;
+}
+
+.form-box .button-label:hover {
+  font-weight: bold;
+}
+
+.form-box .button-label .label {
+  margin-bottom: 0px;
+}
+
+.form-box .button {
+  float: left;
+  background-color: $light-grey;
+  border-radius: 5px;
+  padding: .7rem;
+}
+
 .form-box .input {
   width: 100%;
   padding: 10px;
@@ -33,11 +55,13 @@
   background-color: $light-grey;
   color: $med-grey;
   font-family: sans-serif;
+  font-size: 1.2rem;
 }
 
 .form-box .textarea {
   height: 100px;
   resize: none;
+  font-size: 1.2rem;
 }
 
 .return-form {
@@ -53,14 +77,22 @@
   margin-right: 1rem;
 }
 
-.form a {
-  color: $blue;
-  font-weight: bold;
+.formbox-link {
+  margin: 0 .2rem;
+}
+
+.formbox-link a {
+  background-color: $primary-light;
+  border-radius: 5px;
+  padding: 7px;
+  margin-top: 10px;
+  color: white;
   text-decoration: none;
 }
 
-.form a:hover {
-  color: $teal;
+.formbox-link a:hover {
+  background-color: lighten($primary-light, 20);
+  color: darken($primary-light, 20);
   text-decoration: none;
   cursor: pointer;
 }
