--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -17,8 +17,12 @@ p {
   margin: 3% 0% !important;
 }
 
+.app {
+  position: relative;
+}
+
 .main {
-  margin-top: 7rem;
+  margin-top: 15rem;
   margin-bottom: 15rem;
 }
 
