--- a/src/styles/atoms/footer.scss
+++ b/src/styles/atoms/footer.scss
@@ -5,7 +5,7 @@
 .footer {
   position: fixed;
   bottom: 0;
-  background-color: rgba(255,255,255,.95);
+  background-color: rgba(255,255,255,.90);
   color: $primary;
   font-family: $variane;
   font-size: 2rem;
@@ -13,4 +13,6 @@
   width: 100%;
   padding: 2rem;
   margin-top: 3rem;
+  -webkit-box-shadow: 0 0 500px 50px rgba(255,255,255,.85);
+  box-shadow: 0 0 500px 50px rgba(255,255,255,.85);
 }
