--- a/src/styles/navigation/message.scss
+++ b/src/styles/navigation/message.scss
@@ -1,10 +1,15 @@
 @import './../main/variables.scss';
 
 .message-box {
+    position: absolute;
+    z-index: 200;
+    top: -8rem;
+    left: 0;
+    right: 0;
+    width: 90%;
+    margin: auto;
     border-radius: 10px;
     padding: 35px;
-    margin: 3%;
-    margin-bottom: 4%;
 }
 
 .message-box.error {
