--- a/src/styles/navigation/navbar.scss
+++ b/src/styles/navigation/navbar.scss
@@ -8,7 +8,9 @@
   z-index: 100;
   width: 100%;
   height: 6rem;
-  background-color: rgba(255, 255, 255, .9)
+  background-color: rgba(255, 255, 255, .9);
+  -webkit-box-shadow: 0 0 500px 50px rgba(255,255,255,.85);
+  box-shadow: 0 0 500px 50px rgba(255,255,255,.85);
 }
 
 .navbar-toggler {
