finished building out and debugging tag manager for best user experience, finessed messaging

--- a/src/styles/main/variables.scss
+++ b/src/styles/main/variables.scss
@@ -30,6 +30,7 @@ $sage: #a5cc80;
 $seafoam: #81fac0;
 $aqua: #4ce8fa; // #81f8fa
 $teal: #6acfd6;
+$dark-teal: #12bcaf; // used for for the check and plus icons
 
 $cause: #81bbfa;
 $periwinkle: #8481fa;
