--- a/src/styles/atoms/footer.scss
+++ b/src/styles/atoms/footer.scss
@@ -7,8 +7,9 @@
   bottom: 0;
   background-color: rgba(255,255,255,.90);
   color: $primary;
-  font-family: $variane;
+  font-family: $primary-font;
   font-size: 2rem;
+  letter-spacing: .2rem;
   text-align: center;
   width: 100%;
   padding: 2rem;
