--- a/src/styles/views/view.scss
+++ b/src/styles/views/view.scss
@@ -67,6 +67,16 @@
   margin: 20% 30%;
 }
 
+.input {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: $light-grey;
+  color: $med-grey;
+  font-family: sans-serif;
+  font-size: 1.2rem;
+}
+
 
 /* STYLING FOR NON-MOBILE VIEWS */
 
