--- a/src/styles/views/view.scss
+++ b/src/styles/views/view.scss
@@ -44,7 +44,6 @@
 }
 
 .secondary-header {
-  margin: 2rem 0;
   letter-spacing: .1rem;
 }
 
@@ -58,6 +57,18 @@
 .highlight-img, .option-img {
   margin: 0 20%;
   width: 40%;
+}
+
+.side-img {
+  display: block;
+  margin: 15%;
+  width: 60%;
+}
+
+.segment {
+  display: block;
+  margin: 0;
+  margin-left: 15%;
 }
 
 .preview-text {
@@ -78,7 +89,24 @@
 }
 
 
-/* STYLING FOR NON-MOBILE VIEWS */
+/* STYLING FOR RESPONSIVE VIEWS */
+
+@media(min-width:800px) {
+  .side-img {
+    display: inline-block;
+    margin: 0;
+    margin-left: 15%;
+    width: 30%;
+    vertical-align: top;
+  }
+  
+  .segment {
+    display: inline-block;
+    margin: 0;
+    margin-left: 5%;
+    max-width: 30%;
+  }
+}
 
 @media(min-width:992px) {
   #home.view {
@@ -95,6 +123,22 @@
     margin-top: 6rem;
     width: 100%;
   }
+  
+  .side-img {
+    max-width: 20%;
+  }
+
+  .title, .header, .welcome {
+    font-size: 2.5rem;
+  }
+
+  .preview-text, .description {
+    font-size: 1.2rem;
+  }
+
+  .input {
+    font-size: 1.1rem;
+  }
 }
 
 @media(min-width:1200px) {
@@ -102,6 +146,10 @@
     margin: 0 25%;
     margin-left: 35%;
     width: 36%;
+  }
+
+  .segment {
+    vertical-align: middle;
   }
 }
 
@@ -111,16 +159,11 @@
 // Upload Views
 
 .file-upload {
-  position: relative;
   margin-top: 4rem;
 }
 
 .file-upload .header {
   margin-bottom: 2rem;
-}
-
-.file-upload-image {
-  width: 80%;
 }
 
 .file-preview {
@@ -157,6 +200,5 @@
 // IMPORT ALL SPECIALIZED VIEW STYLING
 
 @import './datePicker.scss';
-@import './fileViewer.scss';
 @import './form.scss';
 @import './reactTable.scss';
